--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="./assets/sique-gesso-favicon.png">
-  
+  <script src="https://kit.fontawesome.com/591113aa3f.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
