--- a/src/index.html
+++ b/src/index.html
@@ -12,4 +12,6 @@
   <app-root></app-root>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.js"></script>
+<script src="exceljs.js"></script>
 </html>
